<resources>
    <string name="app_name">ToDo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="LOGIN">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account_sign_in">don_t_have_an_account_sign_in</string>
    <string name="don_t_have_an_account_click_here_to_sign_up">Don\'t have an account ? Click here to Sign UP</string>
    <string name="sign_up_now">Sign Up now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_redirect">Login</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="home">ToDo</string>
    <string name="update_task">Update Task</string>
    <string name="logout">logout</string>
    <string name="task">Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description …</string>
    <string name="add_task">Add Task</string>
    <string name="close_bt">close_bt</string>
    <string name="test_1">test 1</string>
    <string name="delete_task">delete_task</string>
    <string name="edit_task">edit_task</string>
</resources>