<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Task Title (Clickable to Expand/Collapse Description) -->
            <TextView
                android:id="@+id/todoTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_1"
                android:textSize="22sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:clickable="true"
                android:focusable="true"/>

            <!-- Task Description (Initially Hidden) -->
            <TextView
                android:id="@+id/todoTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/task_description"
                android:textSize="16sp"
                android:ellipsize="end"
                android:paddingTop="4dp"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageView
                android:id="@+id/editTask"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_create_24"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/edit_task"/>

            <ImageView
                android:id="@+id/deleteTask"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/delete_task"
                android:src="@drawable/baseline_delete_24"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
