<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_margin="10dp"
    tools:context=".fragments.AddTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/todoClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:rotation="45"
            android:background="@drawable/circle_background"
            android:src="@drawable/baseline_add_24"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/close_bt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskTitleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:maxLines="1"
                android:maxLength="40"
                android:inputType="text"
                android:ellipsize="end" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/task_description"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskDescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:minLines="3"
                android:maxLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/add_task"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
